# examples

features/workspace/cmake/: .gitignore  build.sh  layout_gcc
features/workspace/cmake/chat/: CMakeLists.txt
features/workspace/cmake/chat/src/: app.cpp  chat.cpp
features/workspace/cmake/hello/: CMakeLists.txt
features/workspace/cmake/hello/src/: hello.cpp
features/workspace/cmake/say/: CMakeLists.txt
features/workspace/cmake/say/src/: say.cpp
libraries/poco/md5/: build.sh  conanfile.txt  premake5.lua
